# nix-files

./: .editorconfig  .envrc  .gitignore  .sops.yaml  README.md  _typos.toml  flake.nix  justfile  lints.nix  shell.nix  stylua.toml  switch.sh  treefmt.nix
.github/workflows/: check.yaml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
docs/: references.md
flake/: devshell.nix  treefmt.nix
home/: pgp.txt
home/features/: common.nix
home/global/: default.nix
home/modules/: common.nix
home/sergeiz/: nebulinx.nix
home/users/: default.nix
home/xokdvium/: nebulinx.nix
hosts/: default.nix
hosts/airgapped/: default.nix  home.nix
hosts/base/: default.nix  fixes.nix  home-manager.nix  hostname.nix  locale.nix  nix.nix  nixpkgs.nix  sops.nix  ssh.nix  users.nix
hosts/common/: chaotic.nix  default.nix  fixes.nix  home-manager.nix  hostname.nix  initrd-systemd.nix  locale.nix  man.nix  network-manager.nix  nix.nix  sops.nix  ssh.nix  stylix.nix  swraid.nix  users.nix  xkblayout.nix  yubikey.nix  zerotier.nix
lib/: default.nix  home.nix  host.nix  lints.nix  utils.nix
overlays/: base16-schemes.nix  default.nix  fix-gnome-hyprland.nix  helix.nix  hyprland.nix  nixd-main.nix  obsidian-fix.nix  visidata-fix.nix
scripts/: default.nix  os-install.sh  switch.nix  switch.sh
templates/cpp/: .clang-tidy  .cmake-format  .envrc  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
templates/cpp/.github/workflows/: check.yaml
templates/cpp/cmake/: functions.cmake
templates/cpp/examples/: example.cc
templates/cpp/include/: header.h
(+336 files in other folders)
